# OOP_Lab2

./: CMakeLists.txt  help.cpp  help.h  main.cpp  menu.cpp  menu.h  stack.cpp  stack.h  stack_static.h  test.cpp  test.h
StackLib/: CMakeLists.txt  stack.cpp  stack.h
StackStaticLib/: CMakeLists.txt  stack_static.cpp  stack_static.h
TestLib/: CMakeLists.txt  test.cpp  test.h
tests/: CMakeLists.txt  coverage.functions.html  coverage.html  coverage.testing.cpp.97d2c1846bb16a3ede1768fc59fe506c.html  testing.cpp  tests-stack.gcda  tests-stack.gcno  tests-stack_static.gcno  tests-test.gcda  tests-test.gcno  tests-testing.gcda
tests_static/: CMakeLists.txt  testing_static.cpp  tests-stack_static.gcda  tests-stack_static.gcno  tests-test.gcda  tests-test.gcno  tests-testing.gcda  tests-testing_static.gcda
